icono añadido al NAV

--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -1,6 +1,6 @@
 ---
 
 ---
-<figure class="w-32">
+<figure class="w-32 hidden sm:block">
     <img src="https://drive.google.com/uc?id=1jgTpxJ-IC9GpkJFx5SrBciO8yzAwpNL6" alt="Logo Neptunia" class="w-full">
 </figure>
