--- a/src/components/LinksContainer.astro
+++ b/src/components/LinksContainer.astro
@@ -1,8 +1,17 @@
 ---
 import NavElement from "./NavElement.astro";
+import Menu from "../icons/menu.astro"
 
 ---
-<ul class="flex gap-1">
-    <NavElement href="#Juegos" title="Juegos"/>
-    <NavElement href="#Naciones" title="Naciones"/>
-</ul>
+<div class="block gap-2 items-center sm:flex">
+    <button>
+        <Menu clases="text-purple-300 block sm:hidden"/>
+    </button>
+    <ul class="hidden sm:flex items-center gap-1">
+        <NavElement href="#Saga" title="Saga"/>
+        <NavElement href="#Juegos" title="Juegos"/>
+        <NavElement href="#Naciones" title="Naciones"/>
+        <NavElement href="#Figuras" title="Figuras"/>
+        <NavElement href="#Soundtracks" title="Sountracks"/>
+    </ul>
+</div>
