--- a/src/components/NavElement.astro
+++ b/src/components/NavElement.astro
@@ -5,6 +5,6 @@ interface Props {
 }
 const {href,title}=Astro.props
 ---
-<li class="border text-white p-1">
+<li class="text-white p-1">
     <a href={href}>{title}</a>
 </li>
