correcciones en navbar para movil y bg en bodi añadido

--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -2,5 +2,5 @@
 
 ---
 <figure class="w-32 hidden sm:block">
-    <img src="https://drive.google.com/uc?id=1jgTpxJ-IC9GpkJFx5SrBciO8yzAwpNL6" alt="Logo Neptunia" class="w-full">
+    <img src="https://drive.google.com/uc?id=1jgTpxJ-IC9GpkJFx5SrBciO8yzAwpNL6" alt="Logo Neptunia" class="w-full" alt="logo Neptunia">
 </figure>
