--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -2,7 +2,7 @@
 import LinksContainer from "./LinksContainer.astro";
 import Logo from "./logo.astro";
 ---
-<nav class="w-full px-2 py-1 bg-purple-700 bg-opacity-50 flex gap-2 items-center justify-between">
+<nav class="w-full sm:px-2 py-1 bg-purple-800 flex gap-2 items-center justify-between">
     <Logo/>
     <LinksContainer/>
 </nav>
