--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,41 +4,22 @@ import Card from '../components/Card.astro';
 import Navbar from '../components/navbar.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Neptunia FanPage">
 	<Navbar/>
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
+	<main class="max-w-7xl border m-auto">
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
 				title="Documentation"
 				body="Learn how Astro works and explore the official API docs."
 			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
+			
 		</ul>
 	</main>
 	<p id="Juegos" class="text-white">Juegos</p>
 </Layout>
 
-<style>
+<!-- <style>
 	main {
 		margin: auto;
 		padding: 1rem;
@@ -95,4 +76,4 @@ import Navbar from '../components/navbar.astro';
 		gap: 2rem;
 		padding: 0;
 	}
-</style>
+</style> -->
