--- a/src/components/Seccion.astro
+++ b/src/components/Seccion.astro
@@ -1,10 +1,13 @@
 ---
 interface Props {
-    title:string
+    title:string,
+    ancla:string
 }
-const {title}= Astro.props;
+const {title,ancla}= Astro.props;
 ---
-<section>
-    <h1 class="border-b border-purple-700">{title}</h1>
+<section id={ancla} class="mt-4">
+    <div class="border-b-4 border-indigo-900">
+        <h1 class="bg-indigo-900 rounded-t-lg w-fit py-2 px-3 font-bold font-sans text-3xl text-indigo-200">{title}</h1>
+    </div>
     <slot/>
 </section>
