--- a/src/components/Seccion.astro
+++ b/src/components/Seccion.astro
@@ -6,8 +6,8 @@ interface Props {
 const {title,ancla}= Astro.props;
 ---
 <section id={ancla} class="mt-4">
-    <div class="border-b-4 border-indigo-900">
-        <h1 class="bg-indigo-900 rounded-t-lg w-fit py-2 px-3 font-bold font-sans text-3xl text-indigo-200">{title}</h1>
+    <div class="border-b-4 border-violet-900">
+        <h1 class="bg-violet-900 rounded-t-lg w-fit py-2 px-3 font-bold font-sans text-3xl text-indigo-200">{title}</h1>
     </div>
     <slot/>
 </section>
