--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,58 +1,23 @@
 ---
 interface Props {
 	title: string;
-	href: string;
 	cover:string
 }
 
-const { href, title,cover } = Astro.props;
+const {title,cover } = Astro.props;
 ---
 
-<a href={href} target="_self">
-	<figure class="max-w-sm">
+<div class="relative block max-w-sm rounded-lg overflow-hidden">
+	<figure class="w-full">
 		<img src={cover} alt="entrega" class="w-full">
 	</figure>
-	<div>
-		<h2>{title}</h2>
+	<div class="absolute top-full w-full h-full bg-violet-900 text-violet-200 bg-opacity-80 flex flex-col justify-center items-center gap-2 transition-all duration-300">
+		<h2 class="font-semibold text-lg">{title}</h2>
+		<slot/>
 	</div>
-</a>
+</div>
 <style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
+	div:hover > div{
+		top: 0;
 	}
 </style>
