--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Seccion from '../components/Seccion.astro';
 import Card from '../components/Card.astro';
 import Steam from '../icons/Steam.astro';
 import PsVita from '../icons/PsVita.astro';
+import Play4 from '../icons/Play4.astro';
 ---
 
 <Layout title="Neptunia FanPage">
@@ -45,14 +46,67 @@ import PsVita from '../icons/PsVita.astro';
 		</div>
 	</Seccion>
 	<Seccion ancla='Juegos' title='Entregas'>
-		<div>
+		<div class="px-3 py-4 flex flex-wrap justify-center sm:justify-evenly items-center gap-2">
 			<Card title='Hyperdimension Neptunia Re;Bith 1' cover='https://drive.google.com/uc?id=1p-ZBEUliXa-Uop8_scLEGUNQ4VrntNUL'>
-				<di class="flex gap-2 justify-center items-center">
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
 					<a href="" target="_blank">
-						<Steam clases="w-8 h-8"/>
+						<Steam clases="size-8"/>
 					</a>
 					<a href="" target="_blank">
-						<PsVita clases="w-16 h-16"/>
+						<PsVita clases="size-12"/>
+					</a>
+					<a href="" target="_blank">
+						<Play4 clases="size-10"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Hyperdimension Neptunia Re;Bith 2' cover='https://drive.google.com/uc?id=13h9JI4OgUQjpAvFSqtzNAbIrb4opfEWI'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="" target="_blank">
+						<PsVita clases="size-12"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Hyperdimension Neptunia Re;Bith 3' cover='https://drive.google.com/uc?id=1GCfAXM7RV5m8sV6RZM4tyx0m7uu5D8v8'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="" target="_blank">
+						<PsVita clases="size-12"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Megadimension Neptunia VII' cover='https://drive.google.com/uc?id=1lloC92iFb2AKU-GHaAVQXv8s_Ryn_vTa'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="" target="_blank">
+						<Play4 clases="size-10"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Megatagmension + Neptune: Blanc VS Zombies' cover='https://drive.google.com/uc?id=18BZIwLnm-mkRyrkXB1e4xaJTQSxsv_Dg'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="" target="_blank">
+						<PsVita clases="size-12"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Cyberdimension: Four Goddesses Online' cover='https://drive.google.com/uc?id=1ErEqQK3xokmO-q241SRSFIzpcI0YX1QW'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="" target="_blank">
+						<Play4 clases="size-10"/>
 					</a>
 				</div>
 			</Card>
