Imagenes guardadas localmente

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,10 @@ import Play4 from '../icons/Play4.astro';
 <Layout title="Neptunia FanPage">
 	<Navbar/>
 	<main class="max-w-7xl m-auto">
-	<Parallax fondo='https://drive.google.com/uc?id=1poPbC5Wx5rwq-teLd3YXjnlw3iY4VPac' textColor="white">
+	<Parallax fondo='/src/imgs/backgrounds/capitulos.png' textColor="white">
 		<div class="flex flex-wrap items-center justify-center gap-2 my-5">
 			<figure class=" max-w-sm">
-				<img src="https://drive.google.com/uc?id=1jgTpxJ-IC9GpkJFx5SrBciO8yzAwpNL6" alt="Logo Neptunia" class="w-full" alt="logo Neptunia">
+				<img src="/src/imgs/logo.png" alt="Logo Neptunia" class="w-full" alt="logo Neptunia">
 			</figure>
 			<div class=" max-w-lg px-2 sm:px-0 text-lg">
 				<p>
@@ -41,13 +41,13 @@ import Play4 from '../icons/Play4.astro';
 				</p>
 			</div>
 			<figure class=" max-w-sm rounded-md overflow-hidden relative after:content-[''] after:absolute after:w-full after:h-full after:top-0 after:shadow-inner after:shadow-violet-900 after:rounded-md">
-				<img src="https://drive.google.com/uc?id=1EP4neqJe_f24vKdRtU5YRioAgnWB3hVe" alt="game dustri">
+				<img src="/src/imgs/pictures/Gamindustri.png" alt="game dustri">
 			</figure>
 		</div>
 	</Seccion>
 	<Seccion ancla='Juegos' title='Entregas'>
 		<div class="px-3 py-4 flex flex-wrap justify-center sm:justify-evenly items-center gap-2">
-			<Card title='Hyperdimension Neptunia Re;Bith 1' cover='https://drive.google.com/uc?id=1p-ZBEUliXa-Uop8_scLEGUNQ4VrntNUL'>
+			<Card title='Hyperdimension Neptunia Re;Bith 1' cover='/src/imgs/games/HNR1.png'>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
 					<a href="" target="_blank">
 						<Steam clases="size-8"/>
@@ -60,7 +60,7 @@ import Play4 from '../icons/Play4.astro';
 					</a>
 				</div>
 			</Card>
-			<Card title='Hyperdimension Neptunia Re;Bith 2' cover='https://drive.google.com/uc?id=13h9JI4OgUQjpAvFSqtzNAbIrb4opfEWI'>
+			<Card title='Hyperdimension Neptunia Re;Bith 2' cover='/src/imgs/games/HNR2.png'>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
 					<a href="" target="_blank">
 						<Steam clases="size-8"/>
@@ -70,7 +70,7 @@ import Play4 from '../icons/Play4.astro';
 					</a>
 				</div>
 			</Card>
-			<Card title='Hyperdimension Neptunia Re;Bith 3' cover='https://drive.google.com/uc?id=1GCfAXM7RV5m8sV6RZM4tyx0m7uu5D8v8'>
+			<Card title='Hyperdimension Neptunia Re;Bith 3' cover='/src/imgs/games/HNR3.png''>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
 					<a href="" target="_blank">
 						<Steam clases="size-8"/>
@@ -80,7 +80,7 @@ import Play4 from '../icons/Play4.astro';
 					</a>
 				</div>
 			</Card>
-			<Card title='Megadimension Neptunia VII' cover='https://drive.google.com/uc?id=1lloC92iFb2AKU-GHaAVQXv8s_Ryn_vTa'>
+			<Card title='Megadimension Neptunia VII' cover='/src/imgs/games/HNRVII.png'>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
 					<a href="" target="_blank">
 						<Steam clases="size-8"/>
@@ -90,7 +90,7 @@ import Play4 from '../icons/Play4.astro';
 					</a>
 				</div>
 			</Card>
-			<Card title='Megatagmension + Neptune: Blanc VS Zombies' cover='https://drive.google.com/uc?id=18BZIwLnm-mkRyrkXB1e4xaJTQSxsv_Dg'>
+			<Card title='Megatagmension + Neptune: Blanc VS Zombies' cover='/src/imgs/games/MTNBNZ.png'>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
 					<a href="" target="_blank">
 						<Steam clases="size-8"/>
@@ -100,7 +100,7 @@ import Play4 from '../icons/Play4.astro';
 					</a>
 				</div>
 			</Card>
-			<Card title='Cyberdimension: Four Goddesses Online' cover='https://drive.google.com/uc?id=1ErEqQK3xokmO-q241SRSFIzpcI0YX1QW'>
+			<Card title='Cyberdimension: Four Goddesses Online' cover='/src/imgs/games/CYBERN.jpg'>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
 					<a href="" target="_blank">
 						<Steam clases="size-8"/>
