--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 </html>
 <style>
 	body{
-		background:url(https://drive.google.com/uc?id=1q5zPvSEmkIS5e3fQPG4Ok12Wnaj2sUe5);
+		background:url('../imgs/backgrounds/bg-index.jpg');
 		background-position: center top;
 	}
 </style>
