Seccion de naciones comenzado

--- a/src/components/LinksContainer.astro
+++ b/src/components/LinksContainer.astro
@@ -9,8 +9,8 @@ import Menu from "../icons/menu.astro"
     </button>
     <ul class="sm:flex sm:static items-center gap-1 max-sm:px-2 max-sm:py-1 bg-purple-800" :class="expand?'absolute left-0 right-0 z-50':'hidden'">
         <NavElement href="#Saga" title="Saga"/>
+        <NavElement href="#Personajes" title="Personajes"/>
         <NavElement href="#Juegos" title="Juegos"/>
-        <NavElement href="#Naciones" title="Naciones"/>
         <NavElement href="#Figuras" title="Figuras"/>
         <NavElement href="#Soundtracks" title="Sountracks"/>
     </ul>
