--- a/src/components/Parallax.astro
+++ b/src/components/Parallax.astro
@@ -5,7 +5,7 @@ interface Props {
 };
 const {fondo,textColor}=Astro.props;
 ---
-<section class="parallax sw-full p-2 bg-no-repeat bg-cover bg-fixed" style={'background-image:url('+fondo+')'}>
+<section class="parallax sw-full bg-no-repeat bg-cover bg-fixed" style={'background-image:url('+fondo+')'}>
     <slot/>
 </section>
 <style define:vars={{textColor}}>
