naciones en index listo

--- a/src/components/Nation.astro
+++ b/src/components/Nation.astro
@@ -8,16 +8,20 @@ interface Props {
     titulo:string,
     href:string
 }
-const {nacion,titulo,href}= Astro.props;
+const {bg,nacion,titulo,href}= Astro.props;
 const images=import.meta.glob<{default:ImageMetadata}>('/src/imgs/logos/*.{jpeh,jpg,png}')
 /* en caso que no exista la imagen mostramos un mensaje de error */
 if (!images[nacion]) throw new Error(`"${nacion}" No se encontró la imagen"`);
 
 ---
-<Parallax textColor='white' fondo='/src/imgs/backgrounds/lastation_bg.jpg'>
-    <div class="relative w-full p-3 flex items-center justify-center bg-black bg-opacity-65">
-        <a href={href}>{titulo}</a>
-        <Picture src={images[nacion]()} alt={titulo} loading='lazy'/>
+<Parallax textColor='white' fondo={bg}>
+    <div class="bg-black bg-opacity-65">
+        <a href={href} target="_blank" class=" flex gap-2 justify-center items-center group">
+            <div class="relative">
+                <Picture src={images[nacion]()} alt={titulo} loading='lazy' class='size-52 group-hover:-translate-x-4 transition-all duration-300'/>
+                <h1 class="text-xl max-sm:text-center sm:-z-10 sm:opacity-0 font-medium sm:absolute top-1/2 left-1/4 group-hover:left-full group-hover:opacity-100 group-hover:z-auto transition-all duration-300">{titulo}</h1>
+            </div>
+        </a>
     </div>
 </Parallax>
 <style>
