--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,9 +57,12 @@ import Nation from '../components/Nation.astro';
 		</div>
 
 	</Seccion>
-	<Seccion ancla='Juegos' title='Naciones'>
+	<Seccion ancla='Naciones' title='Naciones'>
 		<div class="pt-4">
-			<Nation titulo='Lastation' href='#' nacion="/src/imgs/logos/Lastation_Logo.png"/>
+			<Nation titulo='Lastation' href='#' nacion="/src/imgs/logos/Lastation_Logo.png" bg="/src/imgs/backgrounds/lastation_bg.jpg"/>
+			<Nation titulo='Planetune' href='#' nacion="/src/imgs/logos/Planetune_Logo.png" bg="/src/imgs/backgrounds/planetune_bg.png"/>
+			<Nation titulo='Leambox' href='#' nacion="/src/imgs/logos/Leambox_Logo.png" bg="/src/imgs/backgrounds/leambox_bg.png"/>
+			<Nation titulo='Lowee' href='#' nacion="/src/imgs/logos/Lowee_Logo.png" bg="/src/imgs/backgrounds/lowee_bg.png"/>
 		</div>
 	</Seccion>
 	<Seccion ancla='Juegos' title='Entregas'>
