--- a/src/components/LinksContainer.astro
+++ b/src/components/LinksContainer.astro
@@ -3,15 +3,14 @@ import NavElement from "./NavElement.astro";
 import Menu from "../icons/menu.astro"
 
 ---
-<div class="block gap-2 items-center sm:flex relative w-full max-sm:px-2  sm:w-fit"  x-data="{expand:false}">
+<div class="block gap-2 items-center sm:flex relative w-full max-sm:px-2 sm:w-fit"  x-data="{expand:false}">
     <button @click="expand=!expand" aria-label="menu">
         <Menu clases="text-purple-300 block sm:hidden"/>
     </button>
     <ul class="sm:flex sm:static items-center gap-1 max-sm:px-2 max-sm:py-1 bg-purple-800" :class="expand?'absolute left-0 right-0 z-50':'hidden'">
         <NavElement href="#Saga" title="Saga"/>
         <NavElement href="#Personajes" title="Personajes"/>
+        <NavElement href="#Naciones" title="Naciones"/>
         <NavElement href="#Juegos" title="Juegos"/>
-        <NavElement href="#Figuras" title="Figuras"/>
-        <NavElement href="#Soundtracks" title="Sountracks"/>
     </ul>
 </div>
