--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,8 +1,6 @@
 ---
 import LinksContainer from "./LinksContainer.astro";
-import Logo from "./logo.astro";
 ---
-<nav class="w-full sm:px-2 py-1 bg-purple-800 flex gap-2 items-center justify-between sticky top-0 z-50">
-    <Logo/>
+<nav class="w-full sm:px-2 py-1 bg-purple-800 flex gap-2 items-center justify-end sticky top-0 z-50">
     <LinksContainer/>
 </nav>
