implementació de view tranitions

--- a/src/components/LinksContainer.astro
+++ b/src/components/LinksContainer.astro
@@ -8,6 +8,7 @@ import Menu from "../icons/menu.astro"
         <Menu clases="text-purple-300 block sm:hidden"/>
     </button>
     <ul class="sm:flex sm:static items-center gap-1 max-sm:px-2 max-sm:py-1 bg-purple-800" :class="expand?'absolute left-0 right-0 z-50':'hidden'">
+        <NavElement href="/" title="Inicio"/>
         <NavElement href="#Saga" title="Saga"/>
         <NavElement href="#Personajes" title="Personajes"/>
         <NavElement href="#Naciones" title="Naciones"/>
