--- a/src/components/Nation.astro
+++ b/src/components/Nation.astro
@@ -2,6 +2,7 @@
 import type { ImageMetadata } from 'astro';
 import { Picture } from 'astro:assets'
 import Parallax from './Parallax.astro';
+import { ViewTransitions } from 'astro:transitions';
 interface Props {
     bg:string,
     nacion:string,
@@ -12,11 +13,10 @@ const {bg,nacion,titulo,href}= Astro.props;
 const images=import.meta.glob<{default:ImageMetadata}>('/src/imgs/logos/*.{jpeh,jpg,png}')
 /* en caso que no exista la imagen mostramos un mensaje de error */
 if (!images[nacion]) throw new Error(`"${nacion}" No se encontró la imagen"`);
-
 ---
 <Parallax textColor='white' fondo={bg}>
-    <div class="bg-black bg-opacity-65">
-        <a href={href} target="_blank" class=" flex gap-2 justify-center items-center group">
+    <div class="bg-black bg-opacity-65" transition:name={titulo}>
+        <a href={href} target="_self" class=" flex gap-2 justify-center items-center group">
             <div class="relative">
                 <Picture src={images[nacion]()} alt={titulo} loading='lazy' class='size-52 group-hover:-translate-x-4 transition-all duration-300'/>
                 <h1 class="text-xl max-sm:text-center sm:-z-10 sm:opacity-0 font-medium sm:absolute top-1/2 left-1/4 group-hover:left-full group-hover:opacity-100 group-hover:z-auto transition-all duration-300">{titulo}</h1>
