--- a/src/layouts/NationLayout.astro
+++ b/src/layouts/NationLayout.astro
@@ -2,11 +2,32 @@
 import { ViewTransitions } from 'astro:transitions';
 import Navbar from '../components/navbar.astro';
 import Footer from '../components/Footer.astro';
+
 interface Props {
 	title: string;
+	fondo:string;
 }
 
-const { title } = Astro.props;
+const { title,fondo } = Astro.props;
+//definimos nuestra animacion personalizada
+/* const animacion={
+	old:{
+		name:'slideDown',
+		duration:'0.3s',
+		easing: 'ease-out',
+    fillMode: 'backwards',
+	},
+	new: {
+		name: 'slideUp',
+		duration: '0.3s',
+		easing: 'ease-out',
+		fillMode: 'backwards',
+	}
+}
+const verticalSlide = {
+  forwards: animacion,
+  backwards: animacion,
+} */
 ---
 
 <!doctype html>
@@ -18,22 +39,18 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<ViewTransitions/>
+        <ViewTransitions/>
 	</head>
-	<body class=" bg-cover bg-fixed bg-no-repeat">
-		<Navbar/>
-		<main class="max-w-7xl m-auto">
+	<body class=" bg-cover bg-fixed  bg-no-repeat" style={'background-image:url('+fondo+')'}>
+        <Navbar/>
+		<main transition:name={title} class="bg-black bg-opacity-60">
 			<slot />
 		</main>
 		<Footer/>
 	</body>
 </html>
-<style>
-	body{
-		background:url('../imgs/backgrounds/bg-index.jpg');
-		background-position: center top;
-	}
-	/* @keyframes slideUp {
+<!-- <style is:global>
+	@keyframes slideUp {
 		0%{
 			transform: translateY(20%);
 		}
@@ -48,5 +65,5 @@ const { title } = Astro.props;
 		100%{
 			transform: translateY(20%);
 		}
-	} */
-</style>
+	}
+</style> -->
